--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         introBox.className = 'intro-box';
         introBox.innerHTML = `
           <h3>自我介紹</h3>
-          <p>哈囉~~~慶凡老師，我是李宜臻！目前就讀於淡江大學教育科技學系，熱愛學習與創作。</p>
+          <p>哈囉~~~慶帆老師，我是李宜臻！目前就讀於淡江大學教育科技學系，熱愛學習與創作。</p>
           <p>我喜歡挑戰新事物，對程式設計與多媒體製作充滿熱情。</p>
           <p>在學校期間，我參與許多專案，並學習如何與團隊合作完成目標。</p>
           <p>未來，我希望能夠運用所學，創造出更多有趣且有價值的作品。</p>
